--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^3.4.0"
   },
   "scripts": {
